fix(string-filter): stretch input to full width

--- a/projects/extra-clarity/datagrid-filters/src/string-filter/string-filter.component.scss
+++ b/projects/extra-clarity/datagrid-filters/src/string-filter/string-filter.component.scss
@@ -7,8 +7,16 @@
     .clr-input-wrapper {
       display: flex;
 
-      input {
-        flex-grow: 1;
+      > .clr-input-group {
+        flex: 1;
+
+        .clr-input {
+          width: 100%;
+        }
+      }
+
+      > .clr-input {
+        flex: 1;
       }
     }
   }
